# midwest_mainline

./: .containerignore  .env  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  diesel.toml  new_db.fish
.cargo/: config.toml
dht/: Cargo.toml
dht/src/: dht.rs  lib.rs  message.rs  our_error.rs  parser_tester.rs  schema.rs  token_generator.rs  types.rs  utils.rs
dht/src/dht/: dht_handle.rs  krpc_broker.rs  router.rs  txn_id_generator.rs
dht/src/message/: announce_peer_query.rs  error.rs  find_node_get_peers_response.rs  find_node_query.rs  get_peers_query.rs  ping_announce_peer_response.rs  ping_query.rs
downloader/: Cargo.toml  build.rs  notes.md
downloader/src/: bindings.rs  bt_client.rs  defs.rs  download.rs  main.rs  peer.rs  settings.rs  sharing.rs  storage.rs  torrent.rs  torrent_swarm.rs  wire.rs
downloader/src/peer/: download.rs  torrent_swarm.rs  wire.rs
json_rpc_server/: Cargo.toml
json_rpc_server/src/: main.rs
main/: Cargo.toml
main/src/: dht_service.rs  lib.rs  models.rs  our_error.rs  schema.rs  utils.rs
main/src/dht_service/: dht_server.rs
main/src/entities/: mod.rs  peer.rs  prelude.rs  swarm.rs
main/src/message/: announce_peer_query.rs  ping_query.rs
main/tests/digests/: digest_0004  digest_0006  digest_0011  digest_0014  digest_0016  digest_0017  digest_0022  digest_0025  digest_0029  digest_0040  digest_0046  digest_0049  digest_0050  digest_0072  digest_0082  digest_0094  digest_0127  digest_0135  digest_0146  digest_0156  digest_0169  digest_0174  digest_0183  digest_0184  digest_0186  digest_0187  digest_0188  digest_0191  digest_0222  digest_0223  digest_0251  digest_0255  digest_0258  digest_0260  digest_0261  digest_0262  digest_0275  digest_0281  digest_0285  digest_0294  (+46 more)
migration/: Cargo.toml
migration/src/: lib.rs  m20250510_230409_create_table.rs
migrations/2025-05-18-054432_swarm_and_peer/: down.sql  up.sql
migrations/2025-05-19-055103_routing-table/: down.sql  up.sql
src/: ascii.rs  dht.rs  dht_service.rs  domain_knowledge.rs  error.rs  lib.rs  message.rs  models.rs  our_error.rs  routing.rs  schema.rs  token_pool.rs  types.rs  utils.rs
src/dht/: dht_client.rs  dht_handle.rs  dht_server.rs  krpc_broker.rs  message_broker.rs  router.rs  transaction_id_pool.rs
src/dht_service/: dht_client.rs  dht_server.rs  message_broker.rs  peer_guide.rs  router.rs  transaction_id_pool.rs
src/message/: announce_peer_query.rs  error.rs  error_response.rs  find_node_get_peers_non_compliant_response.rs  find_node_get_peers_response.rs  find_node_query.rs  find_node_response.rs  get_peers_deferred_response.rs  get_peers_deferred_response_non_compliant.rs  get_peers_query.rs  get_peers_success_response.rs  ping_announce_peer_response.rs  ping_query.rs
tests/digests/: digest_0007  digest_0010  digest_0012  digest_0013  digest_0015  digest_0018  digest_0021  digest_0023  digest_0027  digest_0030  digest_0032  digest_0035  digest_0038  digest_0039  digest_0041  digest_0043  digest_0045  digest_0048  digest_0052  digest_0053  digest_0055  digest_0056  digest_0058  digest_0059  digest_0064  digest_0066  digest_0068  digest_0070  digest_0074  digest_0076  digest_0078  digest_0080  digest_0092  digest_0093  digest_0103  digest_0104  digest_0105  digest_0106  digest_0107  digest_0108  (+220 more)
