[package]
name = "midwest_mainline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "^0.4", features = ["alloc"] }
bendy = { version = "^0.3", features = ["serde", "serde_bytes"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = "^1.14"
juicy_bencode = "^0.1"
derive_more = "^0.99"
tower = "^0.4"
rand = { version = "^0.8", features = ["small_rng"] }
tokio = { version = "^1.19", features = ["full"] }
task-group = "0.2.2"
either = "^1.7"
async-recursion = "1.0.0"
futures = "0.3.21"
color-eyre = "^0.6"
tracing = "^0.1"
async-trait = "^0.1"
crc32c = "^0.6"
hex = "^0.4"
sha3 = "^0.10"

[dev-dependencies]
serde_json = "^1.0"
console-subscriber = "^0.1.6"
tracing-subscriber = "^0.3"
external-ip = "^4.1"
public-ip = "^0.2"
pretty-hex = "^0.3"
