[package]
name = "midwest_mainline"
version = "0.1.1-beta"
edition = "2021"
license = "MIT"
description = "A BitTorrent DHT implementation in async Rust"
readme = "README.md"
authors = ["Liang Wang"]
repository = "https://github.com/Internal-Compiler-Error/midwest_mainline"
documentation = "https://docs.rs/crate/midwest_mainline/"

# [package.metadata.docs.rs]
# rustc-args = ["--cfg", "tokio_unstable"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "^0.4", features = ["alloc"] }
bendy = { version = "^0.3", features = ["serde", "serde_bytes"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.8.1"
juicy_bencode = "^0.1"
derive_more = "^0.99"
rand = { version = "^0.8", features = ["small_rng"] }
tokio = { version = "^1.38", features = ["full", "tracing"] }
either = "^1.7"
async-recursion = "1.1.0"
futures = "0.3.30"
color-eyre = "^0.6"
tracing = "^0.1"
async-trait = "^0.1"
crc32c = "^0.6"
hex = "^0.4"
sha3 = "^0.10"
pretty-hex = "0.4.1"
serde_unit_struct = "^0.1"
thiserror = "1.0.61"

[dev-dependencies]
serde_json = "^1.0"
console-subscriber = "0.3.0"
tracing-subscriber = "^0.3"
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry-jaeger = "0.22.0"
external-ip = "5.2.0"
public-ip = "^0.2"
