[package]
name = "midwest_mainline"
version = "0.1.1-beta"
edition = "2021"
license = "MIT"
description = "A BitTorrent DHT implementation in async Rust"
readme = "README.md"
authors = ["Liang Wang"]
repository = "https://github.com/Internal-Compiler-Error/midwest_mainline"
documentation = "https://docs.rs/crate/midwest_mainline/"

# [package.metadata.docs.rs]
# rustc-args = ["--cfg", "tokio_unstable"]

[[bin]]
name = "parser_tester"
path = "src/parser_tester.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "^0.4" }
bendy = { version = "^0.3" }
juicy_bencode = "^0.1"
rand = { version = "^0.8", features = ["small_rng"] }
tokio = { version = "^1.38", features = ["full", "tracing"] }
tokio-stream = "0.1"
async-recursion = "1.1.0"
futures = "0.3.30"
color-eyre = "^0.6"
tracing = "^0.1"
async-trait = "^0.1"
crc32c = "^0.6"
hex = "^0.4"
sha3 = "^0.10"
pretty-hex = "0.4.1"
thiserror = "1.0.61"
smallvec = { version = "1.13.2", features = ["const_new"] }
base64 = "0.22.1"
eyre = "0.6.12"
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2" ] }

[dev-dependencies]
serde_json = "^1.0"
console-subscriber = "0.3.0"
tracing-subscriber = "^0.3"
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry-jaeger = "0.22.0"
external-ip = "5.2.0"
public-ip = "^0.2"
