[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
midwest_mainline = { path = "../dht"}
tokio-util = { version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
tracing = "0.1.41"
juicy_bencode = "0.1.3"
libc = "0.2.172"
sha1 = "0.10.6"
rand = "0.9.1"
reqwest = "0.12.20"
url = "2.5.4"
bendy = "0.4.0-beta.4"
anyhow = "1.0.98"
bitvec = "1.0.1"
derive_more = { version = "2.1.0", features = ["full"] }

[build-dependencies]
bindgen = "0.72.0"
