[package]
name = "json_rpc_server"
version = "0.1.0-beta"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
midwest_mainline = { path = "../dht"}
anyhow = "1.0.98"
enum_extract = "0.1.1"
futures = "0.3.31"
public-ip = "0.2.2"
rand = "0.9.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
console-subscriber = "0.4.1"
